# ascdraw

./: Benchmarks.rake  Cargo.toml  NOTICE  README.md  Rakefile  Scenarios.rake  ascdraw.toml  default.profraw  kakvide.toml  theme.toml
.github/workflows/: nightly.yaml
assets/: kakvide.icns  macos-document-types.plist
fixtures/: workspace.json.bz2  workspace_2.json.bz2
src/: app.rs  automation_protocol.rs  canvas.rs  dense_exchange.rs  diagnostics.rs  document.rs  drawing.rs  editor.rs  editor_event.rs  export.rs  face_resolution.rs  history.rs  icon.rs  input.rs  jump.rs  kakoune_integration.rs  kakoune_messages.rs  kakoune_process.rs  layout.rs  legacy_loader.rs  lib.rs  macos.rs  main.rs  model.rs  perf.rs  render.rs  selection.rs  title_policy.rs  toolbar.rs  toolbar_stamp.rs  user_keys.rs
src/canvas/: composition.rs  history.rs
src/editor/: color_tool.rs  grid.rs  jump_mode.rs  layer_facade.rs  layers.rs  lifecycle.rs  line_preview.rs  line_tool.rs  move_tool.rs  pointer_tool.rs  routing.rs  shape_tool.rs  state.rs  text_tool.rs  utility.rs
src/inline_tests/: canvas_tests.rs  document_tests.rs  editor_tests.rs  raster_cache_tests.rs  render_raster_prefill_tests.rs  test_support.rs
src/inline_tests/editor_tests/: editing_and_lines.rs  layers_and_canvas.rs  tools_and_moves.rs
src/render/: cell_graphics.rs  export_png.rs  jump.rs  metal.rs  minimap.rs  popup.rs  raster_cache.rs  window_surface.rs
src/runtime/: automation.rs  automation_dispatch.rs  background.rs  client.rs  config_watch.rs  input_dispatch.rs  mod.rs  startup.rs  window.rs
src/toolbar/: colors.rs  layers.rs  menu_layout.rs  modes.rs  panels.rs  selections.rs  toggles.rs
