[package]
name = "kakvide"
version = "0.1.0"
edition = "2024"

[dependencies]
ab_glyph = "=0.2.32"
anyhow = "=1.0.100"
clap = { version = "=4.6.1", features = ["derive"] }
fontdb = "=0.23.0"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
softbuffer = "=0.4.8"
unicode-width = "0.2.2"
winit = "=0.30.12"
