[package]
name = "ascdraw"
version = "0.1.0"
edition = "2024"

[package.metadata.bundle]
name = "ascdraw"
identifier = "sh.axk.ascdraw"
version = "0.1.0"
category = "Graphics and Design"
short_description = "A native ASCII drawing editor."

[dependencies]
anyhow = "=1.0.100"
arboard = { version = "=3.6.1", default-features = false, features = ["image-data"] }
clap = { version = "=4.6.1", features = ["derive"] }
image = { version = "=0.25.10", default-features = false, features = ["png"] }
png = "=0.18.1"
rfd = "=0.15.4"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
skia-safe = { version = "=0.97.2", features = ["textlayout"] }
softbuffer = "=0.4.8"
toml = "=0.9.7"
unicode-width = "0.2.2"
unicode-segmentation = "1.13.3"
winit = "=0.30.12"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "=0.6.4"
objc2-app-kit = { version = "=0.3.2", default-features = false, features = ["NSApplication", "NSColorSpace", "NSEvent", "NSImage", "NSMenu", "NSMenuItem", "NSResponder", "NSView", "NSWindow", "std"] }
objc2-foundation = { version = "=0.3.2", default-features = false, features = ["NSArray", "NSData", "NSString", "std"] }
