[package]
name = "ascdraw"
version = "0.1.0"
edition = "2024"
authors = ["Przemysław Alexander Kamiński <alexander@kaminski.se>"]
description = "A native, keyboard-first editor for drawing diagrams on a Unicode text canvas"
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/exlee/ascdraw"
homepage = "https://github.com/exlee/ascdraw"
keywords = ["ascii-art", "diagram", "editor", "unicode"]
categories = ["graphics", "text-editors"]
default-run = "ascdraw"

[package.metadata.bundle]
name = "Ascdraw"
identifier = "sh.axk.ascdraw"
icon = ["target/generated/ascdraw.icns"]
version = "0.1.0"
category = "Graphics and Design"
short_description = "A native ASCII drawing editor."

[dependencies]
anyhow = "=1.0.100"
arboard = { version = "=3.6.1", default-features = false, features = ["image-data"] }
clap = { version = "=4.6.1", features = ["derive"] }
image = { version = "=0.25.10", default-features = false, features = ["png"] }
png = "=0.18.1"
rfd = "=0.15.4"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
skia-safe = { version = "=0.97.2", features = ["textlayout"] }
softbuffer = "=0.4.8"
toml = "=0.9.7"
unicode-width = "0.2.2"
unicode-segmentation = "1.13.3"
winit = "=0.30.12"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "=0.6.4"
objc2-app-kit = { version = "=0.3.2", default-features = false, features = ["NSApplication", "NSColorSpace", "NSEvent", "NSImage", "NSMenu", "NSMenuItem", "NSResponder", "NSView", "NSWindow", "objc2-core-graphics", "objc2-quartz-core", "std"] }
objc2-core-foundation = { version = "=0.3.2", default-features = false, features = ["std"] }
objc2-foundation = { version = "=0.3.2", default-features = false, features = ["NSArray", "NSData", "NSString", "std"] }
objc2-metal = { version = "=0.3.2", default-features = false, features = ["MTLCommandBuffer", "MTLCommandQueue", "MTLDevice", "MTLDrawable", "MTLPixelFormat", "MTLTexture"] }
objc2-quartz-core = { version = "=0.3.2", default-features = false, features = ["CALayer", "CAMetalLayer", "objc2-core-foundation", "objc2-core-graphics", "objc2-metal", "std"] }
skia-safe = { version = "=0.97.2", features = ["metal", "textlayout"] }
